change sidebar and card project bar

--- a/src/assets/scss/argon-dashboard/bootstrap/_card.scss
+++ b/src/assets/scss/argon-dashboard/bootstrap/_card.scss
@@ -86,7 +86,7 @@
   border-bottom: $card-border-width solid $card-border-color;
 
   &:first-child {
-    @include border-radius($card-inner-border-radius $card-inner-border-radius 0 0);
+    @include border-radius($card-inner-border-radius $card-inner-border-radius $card-inner-border-radius $card-inner-border-radius);
   }
 }
 
