--- a/src/assets/scss/argon-dashboard/_variables.scss
+++ b/src/assets/scss/argon-dashboard/_variables.scss
@@ -1098,7 +1098,7 @@ $nav-pills-vertical-link-radius:    .875rem !default;
 
 // Navbar
 
-$navbar-padding-y:                  $spacer / 2 !default;
+$navbar-padding-y:                  $spacer !default;
 $navbar-padding-x:                  null !default;
 $navbar-box-shadow:                 0 2px 12px 0 rgba(0, 0, 0, .16) !default;
 
