--- a/src/assets/scss/argon-dashboard/bootstrap/_navbar.scss
+++ b/src/assets/scss/argon-dashboard/bootstrap/_navbar.scss
@@ -21,9 +21,9 @@
   align-items: center;
   justify-content: space-between; // space out brand from logo
   padding-top: $navbar-padding-y;
-  padding-right: $navbar-padding-x; // default: null
+  //padding-right: $navbar-padding-x; // default: null
   padding-bottom: $navbar-padding-y;
-  padding-left: $navbar-padding-x; // default: null
+  //padding-left: $navbar-padding-x; // default: null
   @include gradient-bg();
 
   // Because flex properties aren't inherited, we need to redeclare these first
