--- a/src/assets/scss/argon-dashboard/_alert.scss
+++ b/src/assets/scss/argon-dashboard/_alert.scss
@@ -1,6 +1,6 @@
 @each $state, $value in $theme-gradient-colors {
   .alert-#{$state} {
-    @include gradient-directional(nth($value, 1) 0%, darken(nth($value, -1), 8%) 100%, $deg: 310deg);
+    // @include gradient-directional(nth($value, 1) 0%, darken(nth($value, -1), 8%) 100%, $deg: 310deg);
   }
 }
 
