add modal detail task

--- a/src/assets/scss/pesa-dashboard/bootstrap/_variables.scss
+++ b/src/assets/scss/pesa-dashboard/bootstrap/_variables.scss
@@ -1431,7 +1431,8 @@ $modal-header-padding:              $modal-header-padding-y $modal-header-paddin
 $modal-sm:                          300px !default;
 $modal-md:                          500px !default;
 $modal-lg:                          600px !default;
-$modal-xl:                          1140px !default;
+$modal-sxl:                          800px !default;
+$modal-xl:                          840px !default;
 
 $modal-fade-transform:              translate(0, -50px) !default;
 $modal-show-transform:              none !default;
