--- a/src/assets/scss/pesa-dashboard/_variables.scss
+++ b/src/assets/scss/pesa-dashboard/_variables.scss
@@ -1409,7 +1409,8 @@ $modal-header-padding: $modal-header-padding-y $modal-header-padding-x  !default
 $modal-sm: 300px !default;
 $modal-md: 500px !default;
 $modal-lg: 600px !default;
-$modal-xl: 1140px !default;
+$modal-sxl: 800px !default;
+$modal-xl: 840px !default;
 
 $modal-fade-transform: translate(0, -50px) !default;
 $modal-show-transform: none !default;
