modal delete done

--- a/src/assets/scss/pesa-dashboard/_navbar.scss
+++ b/src/assets/scss/pesa-dashboard/_navbar.scss
@@ -1,5 +1,5 @@
 .navbar {
-  background-color: #f8f9fa !important;
+  background-color: white !important;
   border-bottom: 1px solid rgb(223, 223, 223) !important;
   .navbar-brand {
     color: $dark;
